--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -1,1 +1,23 @@
 // KOMPONENTER
+
+// Mixin för knappar etc med rundade hörn
+@mixin buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    border-style: none;
+    padding: 1% 2%;
+    box-shadow: 1px 1px 2px rgba($color: #000000, $alpha: 0.3);
+    // Hover-effekt för knappar
+    &:hover {
+        cursor: pointer;
+        background: lighten($color: $comp-color, $amount: 10);
+    }
+}
+
+// Knapp
+button {
+    @include buttons;
+    background: $comp-color;
+}
