--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,2 +1,49 @@
 // LAYOUT
 // Webbplatsens generella layout
+
+// Bakgrundsfärg och grundinställningar
+body {
+    display: flex;
+    flex-direction: column;
+    background: $background;
+    padding: 5%;
+    height: 100vh;
+    width: 100vw;
+}
+
+// Huvudmenyn
+nav {
+    width: 50%;
+    float: right;
+
+    ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        list-style-type: none;
+
+        li {
+
+            a {
+                text-decoration: none;
+                color: $dark-text;
+                font-weight: 500;
+            }
+        }
+    }
+}
+
+// Call-to-action-sektion
+.cta {
+    margin-top: 20vh;
+    margin-left: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+    width: 500px;
+    button {
+        width: 350px;
+        height: 50px;
+    }
+}
