--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -11,9 +11,22 @@ body {
     width: 100vw;
 }
 
+// Bakgrundscirklar
+.smallcircle {
+    position: absolute;
+    top: -200px;
+    left: -200px;
+    z-index: -100;
+    width: 600px;
+    height: 600px;
+    border-radius: 50%;
+    background-color: $comp-color;
+}
+
+
 // Huvudmenyn
 nav {
-    width: 50%;
+    width: 40%;
     float: right;
 
     ul {
