--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -12,7 +12,7 @@
     // Hover-effekt för knappar
     &:hover {
         cursor: pointer;
-        background: lighten($color: $comp-color, $amount: 10);
+        transform: scale(1.015);
     }
 }
 
@@ -20,20 +20,4 @@
 button {
     @include buttons;
     background: $comp-color;
-}
-
-// Knapp för mörkt läge
-.darkmodebtn {
-    background: $dark-text;
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    padding: 0;
-
-    &:hover {
-        background: lighten($color: $dark-text, $amount: 10);
-    }
 }
