--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -11,16 +11,28 @@ h1, h2, h4, h4, h5, h6 {
 
 .cta {
     h1 {
-        font-size: 4rem;
-        font-weight: 500;
+        // Kontrollera om variabeln för större huvusrubrik är sann
+        @if $largeh1 {
+            font-size: 5.5rem;
+            font-weight: 500;
+        } @else {
+            font-size: 4rem;
+            font-weight: 500;
+        }
     }
+
     h2 {
-        color: lighten($color: $dark-text, $amount: 20%);
-        font-weight: 400;
-    }
+        // Kontrollera om variabeln för att visa underrubrik är sann
+        @if $showh2 {
+            color: lighten($color: $dark-text, $amount: 20%);
+            font-weight: 400;
+        } @else {
+            display: none;
+        }
 }
 
 button {
     color: black;
     font-size: 1.3rem;
+}
 }
