--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -11,7 +11,6 @@ body {
     width: 100vw;
     max-height: 100vh;
     max-width: 100vw;
-    overflow-x: hidden;
 
     @include phone {
         padding: 5%;
@@ -30,8 +29,8 @@ body {
     background-color: transparentize($comp-color, 0.7);
 
     @include phone {
-        width: 400px;
-        height: 400px;
+        width: 350px;
+        height: 350px;
         top: -100px;
         left: -100px;
     }
@@ -66,9 +65,11 @@ body {
     z-index: -100;
 
     @include phone {
-        width: 105vw;
-        height: 105vw;
-        top: 50vh;
+        width: 90vw;
+        height: 90vw;
+        max-width: 500px;
+        max-height: 500px;
+        top: 55vh;
         right: -15vw;
     }
 }
@@ -81,10 +82,11 @@ nav {
     background: none;
     max-width: 225px;
     border-radius: 25px;
-    padding: 45px;
-    padding-top: 25px;
-    padding-right: 25px;
-    z-index: 500;
+    padding-left: 35px;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 35px;
+    z-index: 2000;
 
     @include phone {
         top: 30px;
@@ -120,6 +122,10 @@ nav {
                 text-decoration: none;
                 color: $dark-text;
                 font-weight: 500;
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
         }
     }
@@ -134,15 +140,27 @@ nav {
     justify-content: space-between;
     height: 225px;
     width: 500px;
+    overflow: visible;
+    z-index: 1000;
 
     @include phone {
         margin-left: 0;
+        width: 100%;
     }
     
     h1 {
         margin-bottom: 2%;
+        @include phone {
+            font-size: 2.5rem;
+        }
     }
-    
+
+     h2 {
+        @include phone {
+            font-size: 1.1rem;
+        }
+     }
+
     button {
         width: 300px;
         height: 50px;
