--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -7,6 +7,7 @@
     }
 }
 
+// Ange animering för stor cirkel
 .bigcircle {
     animation-name: scaleup;
     animation-duration: 35s;
@@ -24,6 +25,7 @@
     }
 }
 
+// Animering för att förminska (mobilstorlek)
 @keyframes scaledown_phone {
     from {transform: scale(1);}
     to {
@@ -32,6 +34,7 @@
     }
 }
 
+// Ange animering för liten cirkel
 .smallcircle {
     animation-name: scaledown;
     @include phone {
@@ -59,6 +62,7 @@
     }
 }
 
+// Ange animering för call-to-action-knapp
 .ctabtn {
     animation-name: cta;
     animation-duration: 12s;
