--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -54,6 +54,7 @@ body {
     }
 }
 
+// Bakgrundsbild
 .backgroundimg {
     position: fixed;
     object-fit: cover;
@@ -64,6 +65,7 @@ body {
     top: -7.5vh;
     z-index: -100;
 
+    // Mediaquery för telefonstorlek
     @include phone {
         width: 90vw;
         height: 90vw;
@@ -88,6 +90,7 @@ nav {
     padding-bottom: 35px;
     z-index: 2000;
 
+    // Mediaquery för telefonstorlek
     @include phone {
         top: 30px;
         right: 30px;
@@ -143,6 +146,7 @@ nav {
     overflow: visible;
     z-index: 1000;
 
+    // Mediaquery för telefonstorlek
     @include phone {
         margin-left: 0;
         width: 100%;
@@ -150,12 +154,14 @@ nav {
     
     h1 {
         margin-bottom: 2%;
+        // Mediaquery för telefonstorlek
         @include phone {
             font-size: 2.5rem;
         }
     }
 
      h2 {
+         // Mediaquery för telefonstorlek
         @include phone {
             font-size: 1.1rem;
         }
